--- a/index.html
+++ b/index.html
@@ -81,6 +81,19 @@
         },
       }
     </script>
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://esm.sh/react@18.2.0",
+        "react/": "https://esm.sh/react@18.2.0/",
+        "react-dom": "https://esm.sh/react-dom@18.2.0",
+        "react-dom/": "https://esm.sh/react-dom@18.2.0/",
+        "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+        "lucide-react": "https://esm.sh/lucide-react@0.263.1?external=react",
+        "recharts": "https://esm.sh/recharts@2.12.0?external=react,react-dom"
+      }
+    }
+    </script>
     <style>
       body {
         font-family: 'Inter', sans-serif;
@@ -165,18 +178,6 @@
         text-shadow: 0 0 15px rgba(217, 70, 239, 0.6);
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
-    "d3": "https://aistudiocdn.com/d3@^7.9.0"
-  }
-}
-</script>
 </head>
   <body class="bg-slate-50 text-slate-900 dark:bg-[#020617] dark:text-[#e2e8f0]">
     <div id="root"></div>
